# CPiscineTester

./: CMakeLists.txt  Makefile  main.c
include/: README.md
include/libstring/: string.c  string.h
include/libstring/error/: error.c  error.h
include/libstring/function/: string_append.c  string_c_str.c  string_clear.c  string_cmp.c  string_cmp_chars.c  string_copy.c  string_erase.c  string_find.c  string_find_end.c  string_insert.c  string_length.c  string_push_back.c  string_resize.c  string_search.c  string_search_end.c  string_set.c  string_size.c
include/libstring/hidden/: __string_realloc.c
include/libstring/struct/: struct.h
include/libvector/: vector.c  vector.h
include/libvector/error/: error.c  error.h
include/libvector/function/: vector_cmp.c  vector_cmp_double.c  vector_cmp_float.c  vector_cmp_int16_t.c  vector_cmp_int32_t.c  vector_cmp_int64_t.c  vector_cmp_int8_t.c  vector_cmp_uint16_t.c  vector_cmp_uint32_t.c  vector_cmp_uint64_t.c  vector_cmp_uint8_t.c  vector_copy.c  vector_erase.c  vector_get.c  vector_insert.c  vector_max_size.c  vector_push_back.c  vector_resize.c  vector_size.c  vector_sort_asc.c  vector_sort_desc.c
include/libvector/hidden/: __vector_pointer_quick_sort_asc.c  __vector_pointer_quick_sort_desc.c  __vector_value_quick_sort_asc.c  __vector_value_quick_sort_desc.c
include/libvector/struct/: struct.h
modules/: pcf.cpp  pcf.h
modules/define/: define.h
modules/define/__options/: __options.cpp  __options.h
modules/src/: c00_tester.c
